fixed merge conlicts from rebase adjusted spacing of popup sections

--- a/ooiui/static/css/common/scienceLayout.css
+++ b/ooiui/static/css/common/scienceLayout.css
@@ -383,15 +383,74 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e6e6', endColorstr='#e6e6e6', GradientType=0 );
 }
 
-.panel-search input[type=text]{
-  font-family: FontAwesome;
+.leaflet-popup-content-wrapper {
+  background-color: rgba(250, 250, 250, 0.17);
+  border: 1px solid white;
 }
-
 .leaflet-popup-content {
   width: auto !important;
+  /* margin: 15px 20px; */
+  margin: 2px 2px 2px 2px; /* outer border */
+  background-color: transparent;
 }
 
 .leaflet-popup-content p {
+  font-weight: 300px;  
+  width: 420px !important;
+  margin: -11px 4px 4px 4px; /* inner sections(title, lat/lon) */
   white-space : nowrap;
-  text-align  : center;
+  text-align  : left;
+  background-color: transparent;
 }
+
+.leaflet-container a.leaflet-popup-close-button {
+  top: -22px;
+  color: white;
+}
+.map-pop-container {
+  width: 460px;
+  overflow: hidden;
+  background-color: white;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.floatLeft {
+width: 50%; 
+float: left; 
+background-color: white;
+padding: 5px 10px 5px 10px; 
+
+    /* background-color: #fff; */
+    /* background-image: radial-gradient( 100% 100%, #fff, rgba(81, 203, 238, 0.15)); */
+    /* /* box-shadow: 0 0 10px rgba(81, 203, 238, 1); */ */
+    /* /* border: 1px solid rgba(81, 203, 238, 1); */ */
+    /* padding-left: 30px; */
+}
+
+.floatRight {
+width: 50%; 
+float: right;
+background-color: white;
+padding: 5px 10px 5px 10px; 
+
+
+    /*  */
+    /* background-color: #fff; */
+    /* background-image: radial-gradient(100% 100%, #fff, rgba(253, 196, 196, .15)); */
+    /* /* box-shadow: 0 0 10px rgba(250, 128, 128, 1); */ */
+    /* /* border: 1px solid rgba(252, 171, 171, 1); */ */
+    /* padding-left: 30px; */
+}
+/* h4 { */
+/*     background-color: white; */
+/*     width: auto; */
+/*     margin-bottom: 5px; */
+/*     /* padding-right: 3px; */ */
+/*     padding-left: 5px; */
+/*   } */
+
+/* .leaflet-popup-content { */
+/*     width: auto !important; */
+/*     margin: -10px 5px 5px 5px; */
+/*     background-color: transparent; */
